# GameplayProgramming-Extra-Assignment

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
scripts/: CleanAllBuild.bat  CleanIntermediateBuildData.bat
source/: stdafx.h
source/framework/: main.cpp
source/framework/EliteAI/EliteData/: EBlackboard.h
source/framework/EliteAI/EliteDecisionMaking/: EDecisionMaking.h
source/framework/EliteAI/EliteDecisionMaking/EliteBehaviorTree/: EBehaviorTree.cpp  EBehaviorTree.h
source/framework/EliteAI/EliteDecisionMaking/EliteFiniteStateMachine/: EFiniteStateMachine.cpp  EFiniteStateMachine.h
source/framework/EliteAI/EliteGraphs/EliteGraph/: EGraph.cpp  EGraph.h  EGraphConnection.h  EGraphNode.h
source/framework/EliteAI/EliteGraphs/EliteGraphAlgorithms/: EAStar.cpp  EAStar.h  EBFS.cpp  EBFS.h  EEularianPath.h  EHeuristic.h  EHeuristicFunctions.h  ENavGraphPathfinding.cpp  ENavGraphPathfinding.h  EPathSmoothing.h
source/framework/EliteAI/EliteGraphs/EliteGraphNodeFactory/: EGraphNodeFactory.h
source/framework/EliteAI/EliteGraphs/EliteGraphUtilities/: EGraphEditor.cpp  EGraphEditor.h  EGraphRenderer.cpp  EGraphRenderer.h
source/framework/EliteAI/EliteGraphs/EliteGridGraph/: EConnectionCostCalculator.h  EGridGraph.cpp  EGridGraph.h
source/framework/EliteAI/EliteGraphs/EliteNavGraph/: ENavGraph.cpp  ENavGraph.h  ENavGraphNode.h
source/framework/EliteAI/EliteGraphs/EliteTerrainGridGraph/: ETerrainCostCalculator.h  ETerrainGraphNode.h  ETerrainGridGraph.cpp
source/framework/EliteGeometry/: EGeometry2DTypes.cpp  EGeometry2DTypes.h  EGeometry2DUtilities.h
source/framework/EliteHelpers/: ESingleton.h
source/framework/EliteInput/: EInputCodes.h  EInputData.h  EInputManager.cpp  EInputManager.h
source/framework/EliteMath/: EMat22.h  EMathUtilities.h  EMatrix2x3.cpp  EMatrix2x3.h  EVector2.h  EVector3.h  FMatrix.h
source/framework/ElitePhysics/: EPhysics.h  EPhysicsShapes.h  EPhysicsTypes.h
source/framework/ElitePhysics/Box2DIntegration/: Box2DRenderer.h  EPhysicsWorldBox2D.cpp  ERigidBodyBox2D.cpp
source/framework/EliteRendering/: EDebugRenderer2D.h  EFrameBase.h  ERenderingTypes.h  Shaders.h
source/framework/EliteRendering/2DCamera/: ECamera2D.cpp
source/framework/EliteRendering/SDLIntegration/SDLDebugRenderer2D/: SDLDebugRenderer2D.cpp  SDLDebugRenderer2D.h
source/framework/EliteRendering/SDLIntegration/SDLFrame/: SDLFrame.cpp  SDLFrame.h
source/framework/EliteUI/: EImmediateUI.cpp  EImmediateUI.h
source/framework/EliteWindow/: EWindowBase.h
source/framework/EliteWindow/SDLWindow/: SDLWindow.h
source/projects/: App_Selector.h
source/projects/DecisionMaking/: SmartAgent.cpp  SmartAgent.h
source/projects/DecisionMaking/BehaviorTrees/: App_BT.cpp  App_BT.h  Behaviors.h
source/projects/DecisionMaking/FiniteStateMachines/: App_FSM.cpp  App_FSM.h  StatesAndTransitions.cpp  StatesAndTransitions.h
source/projects/GraphTheory/: App_GraphTheory.cpp  App_GraphTheory.h
source/projects/Movement/Pathfinding/NavMeshGraph/: App_NavMeshGraph.cpp  App_NavMeshGraph.h
source/projects/Movement/Pathfinding/PathfindingAStar/: App_PathfindingAStar.cpp  App_PathfindingAStar.h
source/projects/Movement/Sandbox/: App_Sandbox.cpp  SandboxAgent.cpp  SandboxAgent.h
source/projects/Movement/SteeringBehaviors/: Obstacle.cpp  Obstacle.h  SteeringAgent.cpp  SteeringAgent.h  SteeringHelpers.h
source/projects/Movement/SteeringBehaviors/CombinedSteering/: App_CombinedSteering.cpp  App_CombinedSteering.h  CombinedSteeringBehaviors.cpp  CombinedSteeringBehaviors.h
source/projects/Movement/SteeringBehaviors/Flocking/: App_Flocking.cpp  App_Flocking.h  Flock.cpp  Flock.h  FlockingSteeringBehaviors.cpp  FlockingSteeringBehaviors.h
source/projects/Movement/SteeringBehaviors/PathFollow/: PathFollowSteeringBehavior.cpp  PathFollowSteeringBehavior.h
source/projects/Movement/SteeringBehaviors/SpacePartitioning/: SpacePartitioning.cpp  SpacePartitioning.h
source/projects/Movement/SteeringBehaviors/Steering/: App_SteeringBehaviors.cpp  App_SteeringBehaviors.h  SteeringBehaviors.cpp  SteeringBehaviors.h
source/projects/Shared/: BaseAgent.cpp  BaseAgent.h  NavigationColliderElement.cpp
